tests/check/launch_bounds_placement.co
// RUN: not choreo -t cute %s 2>&1 | FileCheck %s
// CHECK: error: launch_bounds can only be used inside parallel-by blocks.
// CHECK: Totally 1 errors have been detected.

__co__ void bad_placement() {
  launch_bounds(7);
}

int main() { return 0; }